--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Martel&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
+
+    /* colors */
     --white:#FFFFFF;
-    --yellow:#FFC600;
+    --yellow:#FFE070;
     --lightblue:#A6E0FA;
     --blue:#0067D8;
     --linearDark:#F300A3;
     --linearLight:#F1AFA4;
+
+    /* font */
+    --fontPrimary :'Raleway',sans-serif;    
+}
+
+body {
+    background-image: url(/background-mobile.webp);
+    background-size: auto auto;
 }
