--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,22 +1,154 @@
 @import url("https://fonts.googleapis.com/css2?family=Martel&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root {
-	/* colors */
-	--black: #000000;
-	--white: #ffffff;
-	--yellow: #ffe070;
-	--lightblue: #a6e0fa;
-	--blue: #0067d8;
-	--linearDark: #f300a3;
-	--linearLight: #f1afa4;
+* {
+	font-family: "Raleway", sans-serif;
+	box-sizing: border-box;
+}
 
-	/* font */
-	--fontPrimary: "Raleway", sans-serif;
+:root {
+	--yellow: #FFE070;
+	--lightblue: #A6E0FA;
+	--purple: #6C00C1;
+	--blue: #0067D8;
+	--neutral: #121212;
+
+	--radius: 8px;
+
+	--background-gradient: linear-gradient(0deg, #DB009A 0%, #A000AE 10%, #57006C 20%, #001F41 100%);
 }
 
 body {
-	background-image: url(/background.jpg);
-	background-size: auto auto;
-	background-repeat: no-repeat;
-	background-size: cover;
+	margin: 0;
+	min-height: 100vh;
+
+	background-image: var(--background-gradient);
+
+	overflow: hidden;
+}
+
+.btn-primary-smaller,
+.btn-primary {
+	position: relative;
+
+	color: var(--yellow);
+	background-color: var(--blue);
+
+	border: none;
+	border-radius: var(--radius);
+
+	padding: 16px 24px;
+	margin: 0 16px;
+
+	font-weight: 800;
+	font-size: 20px;
+
+	transform: skew(-25deg);
+	box-shadow: var(--yellow) 12px 10px 0;
+	overflow-y: hidden;
+	cursor: pointer;
+}
+
+.btn-primary-smaller > p,
+.btn-primary > p {
+	margin: 0;
+	transform: skew(25deg);
+}
+
+.btn-primary-smaller:active,
+.btn-primary:active {
+	color: var(--blue);
+	background-color: var(--yellow);
+	box-shadow: var(--blue) 12px 10px 0;
+}
+
+.btn-primary-smaller {
+	padding: 8px 16px;
+	font-size: 18px;
+	font-weight: 700;
+	box-shadow: var(--yellow) 9px 7px 0;
+}
+
+.btn-primary-smaller:active {
+	box-shadow: var(--blue) 9px 7px 0;
+}
+
+.btn-tertiary {
+	color: var(--yellow);
+	background: none;
+	border: none;
+
+	font-family: 'Raleway';
+	font-weight: 700;
+	font-size: 18px;
+
+	cursor: pointer;
+}
+
+.input-text {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.input-text label {
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.input-text input {
+	padding: 16px;
+
+	color: var(--neutral);
+	font-size: 16px;
+	font-weight: 600;
+
+	border: solid 4px var(--neutral);
+	border-radius: 16px;
+	outline: none;
+}
+
+.input-text span {
+	color: red;
+}
+
+.input-radio {
+	position: relative;
+	display: flex;
+}
+
+.input-radio input {
+	position: absolute;
+	z-index: 2;
+	left: 0;
+	top: 0;
+
+	visibility: hidden;
+	width: 100%;
+	height: 100%;
+}
+
+.input-radio label {
+	position: relative;
+	z-index: 1;
+
+	width: 100%;
+	padding: 16px;
+
+	background-color: var(--lightblue);
+	color: var(--purple);
+
+	border: solid var(--purple) 4px;
+	border-radius: 20px;
+
+	text-align: center;
+	font-size: 16px;
+	font-weight: 800;
+
+	cursor: pointer;
+}
+
+.input-radio input:checked + label {
+	background-color: var(--purple);
+	border: solid var(--lightblue) 4px;
+	color: var(--lightblue);
 }
